# trace-log-analyzer

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
scripts/: download_mapwalker.py  lint.sh  make_mapwalker_mapper_019.py  make_test_ines_file.py  prepare_test_files.sh
src/: address.rs  analysis.rs  annotation.rs  event.rs  hex.rs  ines.rs  instruction.rs  lib.rs  mapper.rs  opcode.rs  state.rs  trace_log.rs
src/tests/: annotation.csv  test.nes  trace_log.txt
tests/: test.rs
tests/mapper_000/: README.md  annotation.csv  expected_dump.csv
tests/mapper_019/: .gitignore  README.md  annotation.csv  expected_dump.csv
