[package]
name = "trace_log_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.10.0"
flate2 = "1.0.25"
log = "0.4.17"
once_cell = "1.17.0"
regex = "1.7.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tempfile = "3.3.0"

[profile.release]
lto = true
